@@ -4,3 +4,4 @@ AV2 Changelog :: version a4.2
 * New bending tab icons from FavouriteDragon
 
 > Fix penguin, firebender, and airbender name tags being shown
+> Fix cracked account issues - gen fake account UUID based on username
